plugins {
    id 'java'
//    id 'java-library' для транзитивных зависимостей
    id 'application'
    id 'com.adarshr.test-logger' version '2.1.1'
    id 'maven-publish'
}

application {mainClass = 'App'}

compileJava {
    options.release = 17
    options.compilerArgs += ['--enable-preview']
}

run {  standardInput = System.in }

group 'org.example'
version '1.0-SNAPSHOT'

//repositories {
//    flatDir {
//        dirs 'libs' // for local jars
//    }
//}

allprojects {
    repositories {
        mavenCentral()
        mavenLocal()
    }
}

subprojects {
}

dependencies {
    implementation 'org.jetbrains:annotations:23.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.projectlombok:lombok:1.18.22'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0-M1'
    testImplementation 'org.assertj:assertj-core:3.19.0'
    testImplementation 'junit:junit:4.13'

    testImplementation 'org.mockito:mockito-core:4.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.2.0'
    testImplementation 'org.mockito:mockito-inline:4.2.0'

    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.13.0'

    implementation 'org.apache.commons:commons-lang3:3.12.0'

    implementation 'net.imagej:ij:1.51h'

    implementation 'commons-io:commons-io:2.6'

    implementation 'org.postgresql:postgresql:42.5.4'

    implementation 'com.konghq:unirest-java:3.13.6'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    implementation 'org.modelmapper:modelmapper:3.0.0'

    implementation 'com.opencsv:opencsv:5.3'

    implementation 'io.vavr:vavr:0.9.0'

    // for local jars (1 or 2) or publishToMavenLocal()
//    implementation(files("libs/rsa-1.0-SNAPSHOT.jar"))
    implementation("code:rsa:1.0-SNAPSHOT")
    // https://sky.pro/media/dobavlenie-lokalnoj-jar-zavisimosti-v-fajl-build-gradle/

    implementation('org.hibernate.validator:hibernate-validator:8.0.0.Final') {
//        exclude group: 'org.jboss.logging', module: 'jboss-logging'
//        transitive = false
    }
//    api project(':tasks') для транзитивных зависимостей
}

test {
    useJUnitPlatform()
}

testlogger {
    showStandardStreams = true
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

// Плагины Gradle

//apply from: 'script.gradle'
//apply plugin: MyPlugin
//
//class MyPlugin implements Plugin<Project> {
//    @Override
//    void apply(Project project) {
//        println "Hello from MyPlugin"
//    }
//}
//JavaPlugin javaPlugin = project.getPlugins().getPlugin(JavaPlugin)
//println javaPlugin.getClass().getName()
